Changed many paths

--- a/index.html
+++ b/index.html
@@ -12,38 +12,38 @@
         <div class="divider-div"></div>
         <div class="nav-bar">
             <a href="index.html">Articles</a>
-            <a href="aboutus.html">About Us</a>
-            <a href="contactus.html">Contact Us</a>
+            <a href="templates/">About Us</a>
+            <a href="templates/contactus.html">Contact Us</a>
         </div>
     </div>
 
     <div class="articles">
-        <a href="example.html">
+        <a href="templates/example.html">
             <div class="article1">
                 A New Centennial
             </div>
         </a>
-        <a href="example.html">
+        <a href="templates/example.html">
             <div class="article2">
                 Centennial Wrestling's Legacy
             </div>
         </a>
-        <a href="example.html">
+        <a href="templates/example.html">
             <div class="article3">
                 Baseball's Road to State
             </div>
         </a>
-        <a href="example.html">
+        <a href="templates/example.html">
             <div class="article4">
                 Preparing for SATs
             </div>
         </a>
-        <a href="example.html">
+        <a href="templates/example.html">
             <div class="article5">
                 Need Something to Do? 
             </div>
         </a>
-        <a href="example.html">
+        <a href="templates/example.html">
             <div class="article6">
                 Don't Stress for Finals
             </div>
