--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="divider-div"></div>
         <div class="nav-bar">
             <a href="index.html">Articles</a>
-            <a href="templates/">About Us</a>
+            <a href="templates/aboutus">About Us</a>
             <a href="templates/contactus.html">Contact Us</a>
         </div>
     </div>
